# uims-backend

./: Procfile  manage.py  pyproject.toml  render.yaml  requirements.txt
homepage/: admin.py  models.py  serializers.py  urls.py  views.py
homepage/migrations/: 0001_initial.py  0002_remove_newspost_category.py  0003_teamrole_teammember.py  0004_rename_divisionname_teamrole_division_name_and_more.py  0005_alter_teamrole_division_name.py  0006_alter_teamrole_division_name.py  0007_alter_teamrole_division_name.py  0008_alter_teamrole_division_name.py  0009_alter_teamrole_division_name.py  0010_alter_teamrole_division_name.py  0011_alter_teamrole_division_name.py  0012_remove_teamrole_division_name_teamrole_division_and_more.py  0013_alter_teamrole_division_type.py  0014_alter_teamrole_division.py  0015_rename_role_teamrole_role_name.py  0016_auto_20221105_1225.py  0017_alter_teammember_sub_division.py  0018_teammember_foto.py  0019_alter_teammember_foto.py  0020_alter_teammember_foto.py  0021_alter_teammember_foto.py  0022_alter_teammember_foto.py  0023_alter_teammember_foto.py  0024_delete_teammember.py  0025_alter_newspost_thumbnail.py  0026_alter_newspost_thumbnail.py  0027_homepagebanner.py
sponsors/: admin.py  models.py  serializers.py  urls.py  views.py
sponsors/migrations/: 0001_initial.py
team/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
team/migrations/: 0001_initial.py  0002_auto_20221105_1531.py  0003_teammember_linkedin.py  0004_auto_20221220_1555.py  (+1 more)
uims/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
