[tool.poetry]
name = "uims-backend"
version = "0.1.0"
description = "UIMS Backend Project; Poetry is installed for Render.com deployment"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uims_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
